# akb1-delivery-command-center

./: .env.example  .gitignore  .pre-commit-config.yaml  .trivyignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  PRIVACY.md  PROJECT_MANIFEST.md  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_rev4_foundation.py  002_threshold_register.py  003_password_hash.py  004_outcome_enum_extension.py  005_http_method_get.py  006_people_programme_assignments.py  007_programme_raids.py  008_programme_milestones.py  009_programme_health_snapshots.py
backend/app/: __init__.py  cache.py  config.py  db.py  main.py
backend/app/auth/: dependencies.py  lockout.py  passwords.py  tokens.py
backend/app/middleware/: __init__.py  csrf.py  rate_limit.py
backend/app/models/: __init__.py  audit_trail_entries.py  escalation_tier_config.py  people.py  person_programme_assignment.py  programme_health_snapshot.py  programme_milestone.py  programme_raid.py  programmes.py  threshold_calibration_register.py
backend/app/schemas/: admin.py  audit.py  auth.py  people.py  programmes.py
backend/app/seed/: generator.py
backend/app/services/: audit.py  audit_entry.py  audit_search.py  audited_mutation.py  auth_login.py  get_milestone_item.py  get_programme_detail.py  get_raid_item.py  list_programmes_with_health.py  people_service.py  programme_health.py  programme_milestones.py  tier_config.py  (+2 more)
backend/tests/: conftest.py
(+374 files in other folders)
