[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "akb1-dcc-backend"
version = "0.3.0-backend"
description = "AKB1 Delivery Command Center v1 backend service"
# Pinned to Python 3.12 for v1.0.0. See backend/README.md for the rationale
# (pydantic-core PyO3 max 3.13, greenlet has no arm64 3.14 wheel yet).
requires-python = ">=3.12,<3.13"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
  "unit: fast tests with no external dependencies",
  "integration: tests requiring a running Postgres",
  "regression: drill integrity and cross-cutting invariants",
]
filterwarnings = [
  "ignore::DeprecationWarning:passlib.*",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "S", "C4"]
ignore = ["S101", "S105", "S106"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106"]
"alembic/versions/*" = ["E501"]
